# openrailwaymap-exporter

./: .gitignore  Cargo.toml  Notebook.ipynb  README.md  chapter_2.html  crates.js  help.html  index.css  index.html  justfile  overview.puml  pyproject.toml  search-index.js  settings.html  source-files.js
.github/workflows/: benchmark.yml  coverage.yml  docs.yml  gh-pages.yml  tests.yml
assets/: LICENSE_RES.txt
benches/: railway_graph.rs
book/: 404.html  chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  chapter_8.html  chapter_9.html  index.html  introduction.html  overview.puml  print.html  searcher-09f2665d.js  searchindex-4f05ac8a.js  searchindex.js  searchindex.json  toc-4a6d086d.js  toc.html
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md  introduction.md
examples/: ai.rs  app3d.rs  vilbel.rs
openrailwaymap_exporter/: all.html  enum.ElementType.html  fn.calculate_geometry_length.html  fn.count_node_elements.html  fn.count_way_elements.html  fn.create_nodes.html  fn.find_next_existing_node.html  fn.from_railway_elements.html  fn.generate_dot_string.html  fn.generate_svg_string.html  index.html  sidebar-items.js  struct.BasicOpenRailwayMapApiClient.html  struct.Coordinate.html  struct.RailwayEdge.html  struct.RailwayElement.html  struct.RailwayGraph.html  struct.RailwayNode.html  trait.GraphOperations.html  trait.OpenRailwayMapApiClient.html
openrailwaymap_exporter/ai/: enum.TrainAgentAction.html  index.html  sidebar-items.js  struct.TrainAgentAI.html  struct.TrainAgentRL.html  struct.TrainAgentState.html
openrailwaymap_exporter/algorithms/: fn.closest_point_in_linestring.html  fn.is_middle_coord_between.html  fn.points_in_front.html  index.html  sidebar-items.js  trait.Distance.html
openrailwaymap_exporter/app3d/: enum.InteractionMode.html  fn.init.html  fn.init_with_graph.html  fn.setup_app.html  index.html  sidebar-items.js  struct.AppResource.html  struct.DebugResource.html  struct.Edge.html  struct.InteractionModeResource.html  struct.Node.html  struct.Projection.html  struct.SelectedNode.html  struct.SelectedTrain.html
openrailwaymap_exporter/basis_openrailwaymap_api_client/: struct.BasicOpenRailwayMapApiClient.html
openrailwaymap_exporter/coordinate/: struct.Coordinate.html
openrailwaymap_exporter/export/: fn.generate_dot_string.html  fn.generate_svg_string.html  index.html  sidebar-items.js
openrailwaymap_exporter/exporter/: index.html
openrailwaymap_exporter/importer/: index.html  sidebar-items.js  trait.RailwayGraphImporter.html
openrailwaymap_exporter/openrailwaymap_api_client/: trait.OpenRailwayMapApiClient.html
openrailwaymap_exporter/prelude/: fn.calculate_geometry_length.html  fn.create_nodes.html  fn.find_next_existing_node.html  fn.from_railway_elements.html  fn.generate_dot_string.html  fn.generate_svg_string.html  index.html  sidebar-items.js  struct.OverpassApiClient.html  struct.RailwayEdge.html  struct.RailwayGraph.html  struct.RailwayNode.html  trait.RailwayApiClient.html
openrailwaymap_exporter/python/: fn.export_svg.html  index.html  sidebar-items.js  struct.PyOverpassImporter.html  struct.PyRailwayGraph.html
openrailwaymap_exporter/railway_algorithms/: index.html  sidebar-items.js  trait.PathFinding.html  trait.RailwayEdgeAlgos.html  trait.RailwayGraphAlgos.html
openrailwaymap_exporter/railway_api_client/: index.html  sidebar-items.js  trait.RailwayApiClient.html
openrailwaymap_exporter/railway_element/: enum.ElementType.html  fn.count_node_elements.html  fn.count_way_elements.html  struct.RailwayElement.html
openrailwaymap_exporter/railway_graph/: fn.calculate_geometry_length.html  fn.find_next_existing_node.html  index.html  sidebar-items.js  struct.RailwayGraph.html
openrailwaymap_exporter/railway_model/: fn.calculate_geometry_length.html  fn.create_nodes.html  fn.find_next_existing_node.html  fn.from_railway_elements.html  index.html  sidebar-items.js  struct.RailwayEdge.html  struct.RailwayNode.html  type.RailwayEdge.html  type.RailwayNode.html
openrailwaymap_exporter/railway_objects/: index.html  sidebar-items.js  struct.Train.html  trait.GeoLocation.html  trait.Movable.html  trait.Moveable.html  trait.MultipleTargets.html  trait.NextTarget.html  trait.RailwayObject.html
openrailwaymap_exporter/railway_processing/: fn.create_nodes.html
openrailwaymap_exporter/simulation/: index.html  sidebar-items.js  struct.Simulation.html  struct.SimulationExecutor.html  trait.SimulationObject.html
openrailwaymap_exporter/statistics/: fn.path_length.html  index.html
openrailwaymap_exporter/types/: index.html  sidebar-items.js  type.EdgeId.html  type.NodeId.html  type.RailwayObjectId.html
pkg/: README.md  openrailwaymap_exporter.d.ts  openrailwaymap_exporter.js  openrailwaymap_exporter_bg.wasm  openrailwaymap_exporter_bg.wasm.d.ts  package.json
rustdoc/: crates.js  help.html  settings.html  src-files.js
rustdoc/openrailwaymap_exporter/: all.html  index.html
rustdoc/search.index/: 000f985ed4.js  0319e13b51.js  046a3a7c10.js  049c132150.js  053c3fea7f.js  06043fb4b1.js  0789f8a3e4.js  08acbff176.js  0959f90f7b.js  0a0fede4bc.js  0acfcd4b4c.js  0ad6940fcc.js  0b13159954.js  0b8dc6f5e9.js  0c0d591540.js  0c2a2c4399.js  0d10263c08.js  0d16f270ec.js  0d77b022ba.js  0dd4f96238.js  0e7a992460.js  104da65e2d.js  1186570da2.js  12f71c6f2c.js  13df6ceb1c.js  170f7d8c37.js  17e8cf41ac.js  180f19b0e6.js  197a2d037f.js  1b2d80b4a0.js  1c2f9f3e0b.js  1cf6a840c6.js  1daa9695c3.js  1dd1b65f1f.js  1df1f81634.js  1fa6c56ea4.js  206cec9aef.js  216d47d54f.js  2218328c83.js  2373b6c597.js  (+89 more)
src/: app.rs  basis_openrailwaymap_api_client.rs  coordinate.rs  edge.rs  export.rs  lib.rs  main.rs  openrailwaymap_api_client.rs  railway_element.rs  railway_processing.rs  types.rs
src/ai/: mod.rs  train_agent_rl.rs  train_agent_state.rs
src/algorithms/: distance.rs  mod.rs
src/app/: mod.rs  (+8 more)
tests/: bdd_tests.rs  pythonlib.py  test_py_railway_graph.py
(+487 files in other folders)
