[package]
name = "openrailwaymap_exporter"
version = "0.1.0"
edition = "2021"
description = "OpenRailwayMap Exporter is a Rust project that downloads railway data from the OpenRailwayMap API"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/openrailwaymap-exporter"

[lib]
name = "openrailwaymap_exporter"
crate-type = ["cdylib", "rlib"]

[features]
default = ["app3d", "ai"]
ai = ["rurel"]
app3d = ["ai", "bevy", "bevy_console", "bevy_egui", "bevy_mod_picking", "bevy_obj", "bevy_panorbit_camera", "bevy_polyline"]
cucumber = []
python = ["pyo3", "pyo3-asyncio", "pythonize"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
bevy = { version = "0.10.1", optional = true, default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_pbr",
    "x11",
] }
bevy_console = { version = "0.7.0", optional = true }
bevy_egui = { version = "0.20.2", optional = true }
bevy_mod_picking = { version = "0.12.0", optional = true }
bevy_obj = { version = "0.10.1", optional = true }
bevy_panorbit_camera = { version = "0.2.0", optional = true }
bevy_polyline = { version = "0.6.0", optional = true }
clap = "4.1.10"
geoutils = "0.5.1"
geo = "0.24.1"
petgraph = "0.6.3"
pyo3 = { version = "0.18.3", features = ["serde"], optional = true }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"], optional = true }
pythonize = { version = "0.18.0", optional = true }
rand = "0.8.4"
rurel = { version = "0.4.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = "0.3"
svg = "0.13.1"
thiserror = "1.0"
uom = "0.34.0"
url = "2.3.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
instant = "0.1.12"
js-sys = "0.3.61"
kiss3d = "0.32"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.59" }
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.4", default-features = false }
cucumber = { version = "0.19.1" }
mockito = "0.29.0"
tokio = { version = "1.13", features = ["rt", "macros"] }
wasm-bindgen-test = "0.3.33"
yew = { version = "0.20.0", features = ["csr", "ssr"] }

[[bench]]
name = "railway_graph"
path = "benches/railway_graph.rs"
harness = false

[[example]]
name = "app3d"
path = "examples/app3d.rs"
required-features = ["app3d"]

[[test]]
name = "bdd_tests"
required-features = ["cucumber"]
harness = false
