[package]
name = "openrailwaymap_exporter"
version = "0.1.0"
edition = "2021"
description = "OpenRailwayMap Exporter is a Rust project that downloads railway data from the OpenRailwayMap API"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chriamue/openrailwaymap-exporter"

[lib]
name = "openrailwaymap_exporter"
crate-type = ["cdylib", "rlib"]

[features]
default = ["app3d", "ai"]
ai = ["rurel"]
app3d = ["ai", "bevy", "bevy_console", "bevy_egui", "bevy_obj", "bevy_panorbit_camera"]
cucumber = []
python = ["pyo3", "pyo3-async-runtimes", "pythonize"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
bevy = { version = "0.19.0", default-features = false, optional = true, features = [
    "default_app",
    "std",
    "bevy_winit",
    "multi_threaded",
    "webgl2",
    "x11",
    "default_font",
    "3d_bevy_render",
    "scene",
    "bevy_picking",
    "mesh_picking",
] }
bevy_console = { git = "https://github.com/Tastyfish/bevy-console", branch = "bevy-19", optional = true }
bevy_egui = { version = "0.41.0", optional = true, default-features = false, features = [
    "open_url",
    "default_fonts",
    "render",
    "bevy_ui",
    "picking",
] }
bevy_obj = { version = "0.19.0", optional = true }
bevy_panorbit_camera = { version = "0.35.0", features = ["bevy_egui"], optional = true }

clap = "4.1.10"
futures = "0.3.28"
geoutils = "0.5.1"
geo = { version = "0.33.1", features = ["use-serde"] }
petgraph = "0.8.3"
pyo3 = { version = "0.29.0", features = ["serde"], optional = true }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"], optional = true }
pythonize = { version = "0.29.0", optional = true }
rand = "0.10.2"
rurel = { version = "0.6.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = "0.3"
svg = "0.18.0"
uom = "0.38.0"
reqwest = { version = "0.13.4", features = ["blocking", "json", "form"] }
transit-grid = { git = "https://github.com/rusty-rails/transit-grid" }
yew = { version = "0.23.0", features = ["csr", "ssr"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.3", features = ["wasm_js"] }
getrandom3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
instant = "0.1.12"
js-sys = "0.3.61"
kiss3d = "0.45.1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3" }
yew = { version = "0.23.0", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
uuid = { version = "1", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.8.2", default-features = false }
cucumber = { version = "0.23.0" }
tokio = { version = "1.13", features = ["rt", "macros"] }

[dev-dependencies]
approx = "0.5"
mockito = "1.7.2"
wasm-bindgen-test = "0.3.33"
yew = { version = "0.23.0", features = ["csr", "ssr"] }

[[bench]]
name = "railway_graph"
path = "benches/railway_graph.rs"
harness = false

[[example]]
name = "app3d"
path = "examples/app3d.rs"
required-features = ["app3d"]

[[test]]
name = "bdd_tests"
required-features = ["cucumber"]
harness = false
