[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
default-features = false
features = ["python", "pyo3/extension-module"]
bindings = "pyo3"

[package]
name = "openrailwaymap_exporter"

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
